fixed issue with submission footer z-index

--- a/src/styles/_custom_variables.scss
+++ b/src/styles/_custom_variables.scss
@@ -11,7 +11,7 @@ $drop-zone-area-inner-z-index: 1021;
 $login-logo-height:72px;
 $login-logo-width:72px;
 $submission-header-z-index: 1001;
-$submission-footer-z-index: 1000;
+$submission-footer-z-index: 999;
 
 $main-z-index: 0;
 $nav-z-index: 10;
